--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <tr>
                 <td>
                     <img
-                        src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGZhY2V8ZW58MHx8MHx8&w=1000&q=80"
+                        src="https://cdn.pixabay.com/photo/2015/01/08/18/29/entrepreneur-593358__340.jpg"
                         style="border-radius: 50%"
                         alt="No picture"
                         width="200"
@@ -26,7 +26,7 @@
                             <a href="hobbies.html">Student again </a>😄
                         </strong>
                     </p>
-                    <p>I am a webdeveloper in becoming bla bla</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo consequatur aut optio quos quasi, dolor cumque a illum odio unde, esse quisquam ipsam possimus maiores laudantium minima placeat est veritatis.</p>
 
                 </td>
             </tr>
@@ -62,12 +62,12 @@
         <h3>Skills</h3>
         <table border="1px">
             <td>
-                <p> IOS Development ⭐⭐⭐⭐⭐</p>
-                <p> WEB Development ⭐⭐⭐⭐ </p>
+                <p style="padding-left: 10px; padding-right: 10px;"> IOS Development ⭐⭐⭐⭐⭐</p>
+                <p style="padding-left: 10px; padding-right: 10px;"> WEB Development ⭐⭐⭐⭐ </p>
             </td>
             <td>
-                <p> Photography ⭐⭐</p>
-                <p> Painting ⭐ </p>
+                <p style="padding-left: 10px; padding-right: 10px;"> Photography ⭐⭐</p>
+                <p style="padding-left: 10px; padding-right: 10px;"> Painting ⭐ </p>
                 
             </td>
 
