--- a/contact-me.html
+++ b/contact-me.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>My Contact Details</h1>
-        <p>My adress:</p>
+        <p>My Address:</p>
         <p>0777565478</p>
         <p>my email: blabla@something.com</p>
 
