--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li>Book 3</li>
         </ul>
         <hr />
-        <h3><strong> Books and teaching </strong></h3>
+        <h3><strong> My work as Udemy student in Angela's course </strong></h3>
         <table>
             <thead>
                 <th>Dates</th>
